# Meshmess

./: LICENSE  README.md  mesh-mesh-forest-link.pptx  mesh-mess-forest-link-final.pptx  mesh-mess-pitch-desk.pptx
advertisers/: Cargo.toml
advertisers/src/: main.rs
chat_mesh_wifi/: main.py
dashboard/: server.py
dashboard/client/: package-lock.json  package.json
dashboard/client/src/: App.css  App.jsx
python/: connection_manager.py  mesh_node.py  requirements.txt  scanner.py
