[package]
name = "mesh_advertiser"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
serde_json = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56", features = [
    "Devices_Bluetooth_Advertisement",
    "Devices_Bluetooth",
    "Foundation"
] }
